--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="home">ホーム</string>
 
     <string name="search_location">現在地取得</string>
-    <string name="search_input_hint">ジャンルや店舗名で絞り込む</string>
-    <string name="select_range_explanation">検索半径を選択して検索</string>
+    <string name="search_input_keyword">ジャンルや店舗名で絞り込む</string>
+    <string name="select_range">検索半径を選択して検索</string>
     <string-array name="range_array">
         <item>300m</item>
         <item>500m</item>
@@ -17,10 +17,11 @@
     <string name="location_permission_required_message">このアプリでは、位置情報を取得するために位置情報パーミッションが必要です</string>
     <string name="location_error_message">位置情報を取得できませんでした</string>
     <string name="location_permission_denied_message">位置情報が許可されていません</string>
-    <string name="ok_button">OK</string>
+    <string name="ok">OK</string>
     <string name="hot_pepper_url">https://webservice.recruit.co.jp/hotpepper/</string>
 
     <string name="search_result">検索結果</string>
+    <string name="restaurant_Screen">店舗詳細</string>
     <string name="network_error_message">ネットワークエラーが発生しました</string>
     <string name="empty_result_message">検索結果がありませんでした</string>
     <string name="genre">ジャンル</string>
